重寫註冊登入系統

--- a/frontend/main.css
+++ b/frontend/main.css
@@ -117,4 +117,106 @@ input[type="file"]{
     text-decoration:none;
 }
 
+nav{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #fff;
+    height: 80px;
+    width: 100%;
+    display: flex; /* 使用 Flexbox 佈局 */
+}
+
+label.logo {
+    font-size: 35px;
+    line-height: 80px;
+    font-weight: bold;
+    background-color: #1E90FF;
+    color: #fff;
+    padding: 0 20px;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex; /* Flexbox 佈局讓選單水平排列 */
+}
+
+ul.dropdown {
+    margin-left: auto; /* 將 .dropdown 移到最右邊 */
+}
+
+ul li {
+    position: relative;
+}
+
+ul li a {
+    display: block;
+    padding: 20px 25px;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+    color: #333; /* 選單文字顏色 */
+}
+.fa-bars {
+    font-size: 35px; /* 調整圖標大小 */
+    color: #333; /* 調整圖標顏色 */
+    padding: 10px; /* 添加內間距 */
+    cursor: pointer; /* 讓圖標看起來像個可點擊的按鈕 */
+}
+
+/* 如果想讓圖標在 hover 時改變顏色 */
+.fa-bars:hover {
+    color: #1E90FF; /* 在滑鼠懸停時改變顏色 */
+}
+
+ul li ul {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: #fff;
+    padding: 30px 150px;
+    list-style: none;
+    z-index: 999;
+    border: 1px solid #ddd;
+    width: 250px; /* 固定寬度 */
+    height: 150px;
+   
+}
+
+ul li:hover ul {
+    display: block; /* 滑鼠懸停時顯示子選單 */
+}
+
+.dropdown {
+    display: block; /* 確保子選單的項目為塊級元素 */
+}
+
+.dropdown li a {
+    padding: 12px 20px; /* 調整子選單的內間距 */
+    text-align: left;
+}
+.dropdown li {
+    font-size: 30px;
+}
+
+.dropdown li button {
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    background-color: #1E90FF;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown li button:hover {
+    background-color: #00008B; 
+}
+
+
+
+
 
