--- a/frontend/list.css
+++ b/frontend/list.css
@@ -49,6 +49,85 @@ body{
 #dialogBTNBlock .dialogBTN i{
     margin-right: 5px;
 }
+
+.action{
+    position: fixed;
+    top: 20px;
+    right: 30px;
+
+}
+.action .icon{
+    position: relative;
+    border-style:solid;
+    border-radius: 50%;
+    overflow: hidden;
+    width: 60px;
+    height: 60px; 
+    cursor: pointer;
+    background-color: #fff;
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+}
+.action .icon:hover{
+    background-color: #808080;
+}
+.action .icon i{
+    font-size: 40px;
+}
+.action .menu{
+    position: absolute;
+    top: 80px;
+    right: -10px;
+    padding: 10px 20px;
+    background-color: #fff;
+    width: 200px;
+    /* box-sizing: 0 5px 25px rgba(0,0,0,0.1); */
+    border-radius: 15px;
+    transition: 0.2s;
+    justify-content: center;
+    text-align: center;
+    visibility: hidden;
+    opacity: 0;
+}
+.action .menu.active{
+    visibility: visible;
+    opacity: 1;
+}
+.action .menu::before{
+    content: '';
+    position: absolute;
+    top: -5px;
+    right: 28px;
+    width: 20px;
+    height: 20px;
+    background-color: #fff;
+    transform: rotate(45deg);
+}
+.action .menu li{
+    list-style: none;
+    
+}
+.action .menu li h3{
+    font-size: 30px;
+    
+}
+.action .menu li p{
+    margin-top: 5px;
+    font-size: 25px;
+}
+.action .menu .loginout{
+    margin-top: 20px;
+    background-color:#1E90FF ;
+    color: #fff;
+    padding: 5px 50px;
+    border: none; 
+    outline: none;
+    font-size: 20px; 
+    border-radius: 10px;
+    cursor: pointer;
+}
+
 #tablecontainer{
     
     display: flex;
