--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,14 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 body{
+
+    background-color: #2c3e50;
+}
+
+/* 表單部分 */
+#mainContainer{
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #2c3e50;
 }
 #container{
     position: relative;
@@ -20,8 +26,9 @@ body{
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 #container .maintitle{
-    font-size: 1.5rem;
-    color: #333;
+    font-family: "Playwrite GB S", cursive;
+    font-size: 2.5rem;
+    color: #1E90FF;
     font-weight: 500;
     text-align: center;
 }
@@ -29,34 +36,15 @@ body{
     margin-top: 30px;
     margin-bottom: 30px;
 }
-.form .userKey{
+.form .formitem{
     width: 100%;
     margin-top: 20px;
 }
-.form .userKey label{
+.form .formitem label{
     font-size: 1rem;
     color: #333;
 }
-.form .userKey input {
-    position: relative;
-    height: 50px;
-    width: 100%;
-    outline: none;
-    font-size: 1rem;
-    margin-top: 8px;
-    border: 1px solid #ddd;
-    border-radius: 6px;
-    padding: 0 15px;
-}
-.form .userPassword{
-    width: 100%;
-    margin-top: 20px;
-}
-.form .userPassword label{
-    font-size: 1rem;
-    color: #333;
-}
-.form .userPassword input {
+.form .formitem input {
     position: relative;
     height: 50px;
     width: 100%;
@@ -135,3 +123,10 @@ input[type="file"]{
     color: #fff;
     text-decoration:none;
 }
+
+
+
+
+
+
+
