登入系統完成

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -25,7 +25,7 @@ body{
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
-#container .maintitle{
+#container .indexMaintitle{
     font-family: "Playwrite GB S", cursive;
     font-size: 2.5rem;
     color: #1E90FF;
@@ -123,8 +123,175 @@ input[type="file"]{
     color: #fff;
     text-decoration:none;
 }
+.registerPoint{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.registerPoint a{
+    text-decoration: none;
+    color: #1E90FF;
+}
+.Videodialog{
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 25px;
+    border: 1px solid #ccc;
+    z-index: 1000;
+}
+.Editdialog{
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 25px;
+    border: 1px solid #ccc;
+    z-index: 1000;
+}
 
+.closeDialogBtn{
+    margin-top: 15px ;
+    margin-left: 485px ;
+    background-color: #318CE7;
+    border: none;
+    color: white;
+    padding:5px 100px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 25px;
+}
 
+.overlay{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+   
+}
+
+/* 表單部分 */
+.RegisterDialog{
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 50px;
+    border: 1px solid #ccc;
+    z-index: 1000;
+    border-radius: 8px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    max-width: 700px;
+    width: 100%;
+
+}
+.xmark{
+    position: fixed;
+    top: 20px;
+    right: 30px;
+    cursor: pointer;
+}
+.xmark i{
+    font-size: 25px;
+
+}
+#container .maintitle{
+    font-size: 1.5rem;
+    color: #333;
+    font-weight: 500;
+    text-align: center;
+}
+#container .form{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.form .formitem{
+    width: 100%;
+    margin-top: 20px;
+}
+.form .formitem label{
+    font-size: 1rem;
+    color: #333;
+}
+.form .formitem input {
+    position: relative;
+    height: 50px;
+    width: 100%;
+    outline: none;
+    font-size: 1rem;
+    margin: 10px 0;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    padding: 0 15px;
+}
+.form .fileupload{
+    width: 100%;
+    margin-top: 20px;
+}
+input[type="file"]{
+    display: none;
+}
+.form .fileupload label{
+    display: inline-block;
+    color: #fff;
+    background-color: #1E90FF;
+    text-align: center;
+    padding: 15px 40px;
+    font-size: 18px;
+    letter-spacing: 1.5px;
+    cursor: pointer;
+    border-radius: 6px;
+}
+.form .fileupload label i{
+    font-size: 20px;
+    margin-right: 10px;
+}
+.form .fileupload span {
+    margin-left: 15px;
+    font-size: 1rem;
+    color: #333;
+}
+.form .formitem button {
+    position: relative;
+    height: 50px;
+    width: 100%;
+    outline: none;
+    font-size: 1rem;
+    margin-top: 8px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    padding: 0 15px;
+    color: #fff;
+    background-color:#1E90FF;
+    cursor: pointer;
+}
+.form .formitem button:hover{
+    background-color:#00008B;
+}
+
+.form .formitem select{
+    position: relative;
+    height: 50px;
+    width: 100%;
+    outline: none;
+    font-size: 1rem;
+    margin-top: 8px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    padding: 0 15px;
+}
 
 
 
